[gd_scene load_steps=4 format=3 uid="uid://b2lv37i8i5nmx"]

[ext_resource type="Theme" uid="uid://cldijs2xqwyow" path="res://Themes/light_blue_theme.tres" id="1_dova8"]
[ext_resource type="Script" uid="uid://bk5h6q7yme4nc" path="res://Scenes/Note_Popups/note_create_popup.gd" id="2_c75te"]
[ext_resource type="Texture2D" uid="uid://b2mi7v0dcwpf3" path="res://Assets/Button.png" id="3_a1lu4"]

[node name="NoteCreatePopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dova8")
script = ExtResource("2_c75te")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -156.0
offset_right = 256.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Note"

[node name="Spacer" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="RequiredLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "*Required"

[node name="Title" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Title"]
layout_mode = 2
text = "*Title:"

[node name="Spacer2" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/Title"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="TitleLine" type="LineEdit" parent="ColorRect/MarginContainer/VBoxContainer/Title"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Add Text Here"

[node name="Spacer3" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/Title"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Spacer2" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 80

[node name="ConfirmButton" type="TextureButton" parent="ColorRect/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
texture_normal = ExtResource("3_a1lu4")

[node name="ConfirmLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Buttons/ConfirmButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -10.5
offset_right = 33.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "Confirm"

[node name="CancelButton" type="TextureButton" parent="ColorRect/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
texture_normal = ExtResource("3_a1lu4")

[node name="CancelLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Buttons/CancelButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -10.5
offset_right = 26.5
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Buttons/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
